# rift-buddy

./: README.md  index.html  overlay.html  package-lock.json  package.json  splash.html  tsconfig.json  vite.config.js  vue.config.js
public/: index.html  splash.html
public/js/: splash.js
src/: App.vue  Overlay.vue  main.js  main.ts  overlay.ts  style.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/assets/css/: main.less  runes.less
src/components/: ChampSearch.vue  Main.vue  Modal.vue  SearchInput.vue
src/components/icons/: Download.vue  Prohibition.vue  Trash.vue  Upload.vue
src/components/pages/: CreatePage.vue  EditPage.vue  ImportPage.vue  SavedPages.vue
src/lib/: riotApi.js
