[package]
name = "rift-buddy"
version = "0.1.0"
description = "League of Legends Buddy"
authors = ["Jaron P"]
license = ""
repository = ""
default-run = "rift-buddy"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.3" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.5", features = ["api-all"] }
league-client-connector = "0.1.2"
reqwest = { version = "0.11.7", features = ["json", "default-tls"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
